# p5-ml-deployment

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
database/: create_db.py  db.py  insert_data.py
models/: feature_names.joblib  model.joblib
notebooks/: 02_modelisation.ipynb  data_complete.csv
tests/: conftest.py  test_api.py  test_model.py
